# indago

./: .gitignore  Dockerfile  LICENSE  Procfile  README.md  analysis-compose.yml  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py
api/routers/: blacklist.py  cluster.py  etherscan.py
data/: traces-header.csv  transactions-header.csv
data/blacklist_results/: haircut-flagged-rundata.csv  haircut-tornado-rundata.csv  poison-flagged-rundata.csv  poison-tornado-rundata.csv  seniority-flagged-rundata.csv  seniority-tornado-rundata.csv
data/dar/: exchange_clusters.json  user_clusters.json
data/results/cluster/: general.txt
db/mongo/: config.py  database.py  schemas.py
db/sql/: config.py  crud.py  database.py  models.py  schemas.py
diagrams/: address_fetch.drawio  blacklisting.drawio
experimental_notebooks/: algo_testing.ipynb  bq_extract_data.ipynb  compress_df.ipynb  csv_to_parquet.ipynb  db_testing.ipynb  dodgy.ipynb  explore.ipynb  sort_testing.ipynb  tornado_blacklist.ipynb
notebooks/: blacklist_results.ipynb  cluster_results.ipynb  download_and_sort.ipynb  new_blacklist_results.ipynb  risk_levels.ipynb
scripts/: combine_metadata.py  json_to_mongo.py  run_blacklisting.py  run_deposit.py  run_ig.py  run_nx.py  save_to_mongo.py  save_to_sql.py  sort_big_csv.py  sort_big_csv_simple.py  viz_ig.py  viz_nx.py
scripts/analysis/: generate_cluster_data.py
scripts/bash/: algos_to_sql.sh  blacklist_to_mongo.sh  gcs_to_s3.sh  generate_blacklist.sh  generate_blacklist_new.sh  generate_dar_graph.sh  generate_graphs.sh  sort_csv.sh  sort_csv_blocks.sh  sort_csv_traces.sh  sort_csv_transactions.sh
scripts/gcs/: download_and_sort.py  new_setup.sh  rm_column.py  setup.sh
src/blacklist/: advanced_fifo_blacklister.py  base.py  fifo_blacklister.py  haircut_blacklister.py  poison_blacklister.py  seniority_blacklister.py
src/cluster/: base.py  deposit.py
utils/: bigquery.py  loader.py  utils.py
utils/storage/: base.py  google_cloud_storage.py  s3_storage.py
v2/: Cargo.toml  run.sh
v2/src/: data_loader.rs  main.rs  run_data.rs
v2/src/algos/: fifo.rs  haircut.rs  mod.rs  poison.rs  seniority.rs
