[package]
name = "v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
csv = "1.3.0"
fxhash = "0.2.1"
polars = { version = "0.38.1", features = ["lazy", "csv", "dtype-decimal"] }
rayon = "1.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sysinfo = "0.30.7"
thousands = "0.2.0"
